# rust-practice

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-01-19-133916_tasks/: down.sql  up.sql
src/: algorithms.rs  linked_list.rs  main.rs  range_frequency.rs  schema.rs  trie.rs
src/configuration/: configuration.rs
src/data_structures/: segment_tree.rs
src/entities/: mod.rs  prelude.rs  task.rs
src/task_project/: mod.rs  task.rs  task_manager.rs  task_manager_test.rs  task_storage.rs  task_storage_db.rs  task_storage_db_async.rs  task_storage_db_async_test.rs  task_storage_db_test.rs  task_storage_test.rs
