[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
uuid = {  version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
